--- a/server/.env
+++ b/server/.env
@@ -1,2 +1,2 @@
-MONGO_URL="mongodb+srv://apadhy:SSBk41NNA9XxHgfU@cluster0.k5untvf.mongodb.net/"
+MONGO_URL="mongodb+srv://tester:test123@cluster0.jijc8il.mongodb.net/?retryWrites=true&w=majority"
 JWT_SECRET="fasefraw4r5r3wq45wdfgw34twdfg"
