--- a/client/package.json
+++ b/client/package.json
@@ -3,7 +3,7 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
-  "proxy": "http://localhost:4000/",
+  "proxy": "https://sutherland.onrender.com/",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
